# nuit-info-2024-back-end

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  pch.h
src/app/: BackShotsServer.cpp  BackShotsServer.h  BackendServ.cpp  BackendServ.h
src/app/handlers/: HomePageHandler.cpp  HomePageHandler.h  ZikettePageHandler.cpp  ZikettePageHandler.h
